fix: improve background of HomeMain by removing attachment on small devices

--- a/src/containers/HomeMain/styles.module.scss
+++ b/src/containers/HomeMain/styles.module.scss
@@ -3,16 +3,22 @@
 
 .background {
   background: url("/background-home.png");
-  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  // height: 100vh;
+  height: 40vh;
   justify-content: center;
   width: 100vw;
-
+  
+  @include sm {
+    height: 60vh;
+    padding-bottom: 12vh;
+  }
+  
   @include md {
+    background-attachment: fixed;
     height: 100vh;
+    padding-bottom: 20vh;
   }
 }
 
